{
    "name": "PlayerControlsTest",
    "maps": [
        {
            "name": "GamePlay",
            "id": "f41543c1-ffd8-44e0-816d-2fa079b9c8bf",
            "actions": [
                {
                    "name": "AimDash",
                    "type": "Value",
                    "id": "2d76b82d-d0c4-44ed-b356-ff6080eb5151",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "e10f3140-384d-420c-a6c1-d904e9cb32f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AimShoot",
                    "type": "Value",
                    "id": "34e40ff0-a0d6-4125-b212-6faa38a01661",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "dfae5736-838e-4dd2-9584-82c789771c16",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8e0e13c5-970f-4c35-8981-fdf6900194a2",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "AimDash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b5a6bc8-28a3-44a9-8d1d-07d62c9b9097",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ca61eb8-0df7-46f1-8437-bb72bf446e44",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "AimShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94040659-3c07-4e13-853e-25402b1138be",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TestInputs",
            "id": "784df5c0-64ff-410a-ae8b-5d0517bf562b",
            "actions": [
                {
                    "name": "NextScene",
                    "type": "Button",
                    "id": "7c8ace37-081c-4c40-9927-dcde18c3de68",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrevScene",
                    "type": "Button",
                    "id": "155de992-98eb-4fc3-a872-cab880bb8c7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "75bf8fce-9588-4b3e-9d53-9c685e701bc6",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "NextScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99f76e48-b11c-4b11-8567-c8df886f4266",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "PrevScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}